--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ license = "MIT"
 
 [dependencies]
 actix = "0.9"
-mqtt-protocol = { git = "https://github.com/karlri/mqtt-rs.git#0d64e69" }
 log = "0.4"
 futures = "0.3"
 lazy_static = "1.4"
@@ -18,6 +17,10 @@ rand = "0.7"
 [dependencies.tokio]
 version = "0.2"
 features = ["tcp"]
+
+[dependencies.mqtt-protocol]
+git = "https://github.com/zonyitoo/mqtt-rs.git#8f45d33"
+features = ["async"]
 
 [dev-dependencies]
 env_logger = "0.7"
