--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-mqtt-client"
-version = "0.4.4"
+version = "0.5.0"
 authors = ["Syndim <im@syndim.org>"]
 edition = "2018"
 repository = "https://github.com/Syndim/actix-mqtt-client"
@@ -16,13 +16,12 @@ lazy_static = "1.4"
 rand = "0.7"
 
 [dependencies.tokio]
-version = "0.2"
-features = ["tcp"]
+version = "0.3"
+features = ["net", "io-util", "time"]
 
 [dependencies.mqtt-protocol]
-version = "0.8"
+version = "0.9"
 features = ["async"]
 
 [dev-dependencies]
-env_logger = "0.7"
-rand = "0.7"
+env_logger = "0.8"
