--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-mqtt-client"
-version = "0.4.4"
+version = "0.5.0-alpha.1"
 authors = ["Syndim <im@syndim.org>"]
 edition = "2018"
 repository = "https://github.com/Syndim/actix-mqtt-client"
@@ -9,20 +9,20 @@ license = "MIT"
 documentation = "https://docs.rs/actix-mqtt-client/"
 
 [dependencies]
-actix = "0.10"
+actix = "0.12"
 log = "0.4"
 futures = "0.3"
 lazy_static = "1.4"
-rand = "0.7"
+rand = "0.8"
 
 [dependencies.tokio]
-version = "0.2"
-features = ["tcp"]
+version = "1.6"
+features = ["net", "io-util", "time", "sync"]
 
 [dependencies.mqtt-protocol]
-version = "0.8"
-features = ["async"]
+version = "0.11"
+features = ["tokio"]
 
 [dev-dependencies]
-env_logger = "0.7"
-rand = "0.7"
+env_logger = "0.8"
+tokio-stream = "0.1"
